# my-fam-tree

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  README.md  SECURITY.md  compose.ci.yaml  compose.yaml  coverage-fe.json  coverage.json  deny.toml  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.docker/: .dockerignore  api.Dockerfile  migrator.Dockerfile  seeder.Dockerfile  worker.Dockerfile
.githooks/: commit-msg  pre-push
.github/: dependabot.yml  pull_request_template.md
.rusty-dev-tool/: config.toml
.rusty_dev_tool/: config.toml
.sqlx/: query-01a9554146a35cb9ad4585d30b99cefb5516c919d897c5247ad49d48d38965f1.json  query-01d1a794c5db45c522c51e6059ea426b5fc03dace3a7cc015ea6250f628adb3d.json  query-01ef97704869c89e1c53dab9541f8edca5c0779842f462d3b27e6a7e41cfb13c.json  query-01fafc19403039c2d56f1c330c87f70338941f6ccd937cf9711c18446a186a20.json  query-04c1dcebfb7ab57bc46deb8fd5f8dfe7ed8ea06ccbfd234dc76dce1d6f7dafdc.json  query-08a6aca33fcabd1f60dadc40094bf6ce63595cc8716182b9c3b14ef28facbef5.json  query-08fbf4124e0e6dd45f6b4e33feb5a0aaab1a59f5a9a672f9e56e905c8544ba55.json  query-0908cd7aac786f9e6c9fb7ab8e4639a65cf946c83961c7ac01a4e2317a78bb84.json  query-0acc790eea10e4dba0838aa124afa39e813910affdbc76e93f0bdb16bd7141e4.json  query-0b5f851edcf55f130084282600e8225891aa7e94e60624ec1a54fea7dfcd4694.json  query-0f3e158badf977fba5c27ac0a25b8e9ee12633a25a3a22fb8dbc61b56066479e.json  query-1112332f8ef15af222bd984f0bf83c6564ea310b22e55fa427f906175a9cfaec.json  query-11dfdcb79791ca4a52f04e29bb47510bda0a816a49109f5c12285d444537cc5c.json  query-1283ddf5cac20836ca7f96a3629eaa7c0bae9cf6093fc5e6d6d1f6bc6cfbde52.json  query-15ae856b6db7168986b19d61c5512814693072d5a9f9293e6b6fa71ccacff4ff.json  query-15de51694d76f67bc18cbfbcef789f388c3c22f18c5416a2dfb63779233d8674.json  query-1694046d700c99a83aec4ef9f1a931f424a8687713721b8308bd43ce36408493.json  query-169675fc6ab50684216556b0e1232c378d3d2d202a1f4f72cee19a57bc732688.json  query-19453ab00b88d40bdea405bb58dc90fd37ef31fd85f31919acfb3f51478c12d5.json  query-1b15bb4af8e636c768058ffd05204011238732d97bfa5ae8d52a358e465f9f8b.json  (+114 more)
crates/api/: Cargo.toml
crates/api/src/: config.rs  cookies.rs  error.rs  images.rs  lib.rs  multipart.rs  openapi_doc.rs  response.rs  seed.rs  state.rs  tracing_setup.rs  validation.rs
crates/api/src/auth/: claims.rs  jwt.rs  keys.rs  middleware.rs  mod.rs  tokens.rs  user_claims.rs
crates/api/src/middleware/: mod.rs  panic_catcher.rs  request_id.rs
crates/api/src/routes/: audit.rs  auth.rs  contacts.rs  families.rs  health.rs  invites.rs  members.rs  mod.rs  owner_transfer.rs  parent_links.rs  partnerships.rs  person_favourites.rs  person_photos.rs  persons.rs  persons_contact.rs  relationships.rs  reminder_prefs.rs  upcoming.rs  user_avatars.rs  users.rs
crates/api/src/services/: audit.rs  auth_service.rs  mod.rs  relationships_tree.rs  upcoming.rs
crates/api/src/validation/: mod.rs  relationships.rs
crates/api/tests/: audit_flow.rs  auth_errors.rs  auth_flow.rs  envelope.rs  family_invite_flows.rs  health_flow.rs  health_integration.rs  invites_flow.rs  members_flow.rs  owner_transfer_flow.rs  parent_links_flow.rs  partnerships_flow.rs  person_contacts_flow.rs  person_favourites_flow.rs  person_photo_flow.rs  persons_contact_flow.rs  persons_flow.rs  relationships_tree.rs  reminder_prefs_flow.rs  roles_authz.rs  security_regressions.rs  upcoming_flow.rs  user_avatars_flow.rs  user_flows.rs
crates/api/tests/common/: mod.rs
crates/cache/: Cargo.toml
crates/cache/src/: error.rs  job_queue.rs  lib.rs  pool.rs  rate_limit.rs
crates/cache/tests/: job_queue.rs  ping.rs  rate_limit.rs
crates/config/: Cargo.toml
crates/config/src/: api.rs  common.rs  lib.rs  storage.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: capabilities.rs  ids.rs  lib.rs  relationships.rs  role.rs  upcoming.rs
crates/domain/src/repos/: audit_log.rs  email_outbox.rs  families.rs  family_invites.rs  family_memberships.rs  health.rs  janitor.rs  magic_link_tokens.rs  mod.rs  owner_transfers.rs  parent_links.rs  partnerships.rs  person_contacts.rs  person_favourites.rs  persons.rs  refresh_tokens.rs  reminder_digests.rs  reminder_prefs.rs  users.rs
crates/email/: Cargo.toml
crates/email/src/: error.rs  fake.rs  lib.rs  locale.rs  sender.rs  smtp.rs  templates.rs
crates/email/templates/: email_change_de.txt  email_change_en.txt  invite_de.txt  invite_en.txt  magic_link_de.txt  magic_link_en.txt  owner_transfer_admin_de.txt  owner_transfer_admin_en.txt  owner_transfer_owner_de.txt  owner_transfer_owner_en.txt  reminder_digest_de.txt  reminder_digest_en.txt
crates/email/tests/: mailpit.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: main.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: audit_log.rs  counts.rs  email_outbox.rs  error.rs  families.rs  family_invites.rs  family_memberships.rs  health.rs  janitor.rs  lib.rs  magic_link_tokens.rs  owner_transfers.rs  parent_links.rs  partnerships.rs  person_contacts.rs  person_favourites.rs  persons.rs  pool.rs  refresh_tokens.rs  reminder_digests.rs  reminder_prefs.rs  users.rs
crates/persistence/tests/: auth_repos.rs  ping.rs
crates/reminder-worker/: Cargo.toml
crates/reminder-worker/src/: backoff.rs  clock.rs  config.rs  digest.rs  lib.rs  main.rs  state.rs  test_clock_http.rs  ticker.rs
crates/reminder-worker/tests/: digest_flow.rs
crates/seeder/: Cargo.toml
crates/seeder/src/: contacts.rs  ids.rs  lib.rs  main.rs  persons.rs  relationships.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  local.rs  s3.rs  store.rs
crates/worker/: Cargo.toml
crates/worker/src/: clock.rs  config.rs  digest.rs  dispatcher.rs  health.rs  janitor.rs  leader.rs  lib.rs  main.rs  ops_http.rs  outbox.rs  state.rs  test_clock_http.rs  ticker.rs
crates/worker/tests/: digest_flow.rs  janitor_flow.rs  outbox_flow.rs
fe/: .npmrc  .prettierignore  .prettierrc.json  eslint.config.js  (+9 more)
(+262 files in other folders)
