[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/cache",
  "crates/email",
  "crates/persistence",
  "crates/openapi",
  "crates/migrator",
  "crates/reminder-worker",
  "crates/api",
  "crates/seeder",
]

[workspace.package]
edition = "2024"
rust-version = "1.83"
license = "BUSL-1.1"
authors = ["my-family contributors"]
repository = "https://github.com/BentBr/my-family"
description = "A family tree to organise families and share insights of heredity"

[workspace.dependencies]
actix-web = "4.13"
actix-cors = "0.7.1"
anyhow = "1.0"
askama = "0.16"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive", "env"] }
deadpool-redis = "0.23"
dotenvy = "0.15"
# TODO bump: 3.0; latest stable is 2.2 (3.0 is pre-release/alpha as of 2026-05-20).
ed25519-dalek = { version = "2.2", features = ["pem", "rand_core"] }
envy = "0.4"
figment = { version = "0.10", features = ["env", "toml"] }
futures-util = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }
once_cell = "1"
# TODO bump: 0.10; pinned at 0.8 because ed25519-dalek 2.2 still uses rand_core 0.6.
rand = "0.8"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
# TODO bump: 0.9; latest stable is 0.8 (0.9 is alpha as of 2026-05-20).
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "macros", "migrate", "ipnetwork"] }
thiserror = "2"
url = "2.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.5", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

# Strict gate: `pedantic` + `nursery` at deny, all four big lint groups
# enforced. No targeted allows — every clippy finding gets fixed in
# source per Phase 2c spec (workstream D). If a specific lint is
# genuinely inappropriate later, add it back here with a one-line
# rationale rather than scattering `#[allow]` across files.
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
float_arithmetic = "warn"
shadow_unrelated = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
