[package]
name = "my-family-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
my-family-domain = { path = "../domain" }
my-family-cache = { path = "../cache" }
my-family-email = { path = "../email" }
my-family-persistence = { path = "../persistence" }
actix-web.workspace = true
actix-cors.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
envy.workspace = true
figment.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
actix-web = { workspace = true, features = ["macros"] }

[lints]
workspace = true
