[package]
name = "my-fam-tree-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "gen-jwt-keys"
path = "src/bin/gen_jwt_keys.rs"

[dependencies]
my-fam-tree-config = { path = "../config" }
my-fam-tree-domain = { path = "../domain" }
my-fam-tree-cache = { path = "../cache" }
my-fam-tree-email = { path = "../email" }
my-fam-tree-persistence = { path = "../persistence" }
my-fam-tree-storage = { path = "../storage" }
actix-web = { workspace = true, features = ["macros"] }
actix-cors.workspace = true
actix-multipart.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
image.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
# `actix-http` re-export is needed in integration tests so we can name the
# `Service<Request, ...>` type returned by `actix_web::test::init_service`
# inside test-local helper functions. actix-web does not re-export this type.
actix-http = "3.12"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }

[lints]
workspace = true
