[package]
name = "my-family-cache"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
