[package]
name = "my-fam-tree-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
