[package]
name = "my-family-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
utoipa.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
