[package]
name = "my-family-email"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
lettre.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[lints]
workspace = true
