[package]
name = "my-family-email"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
askama.workspace = true
async-trait.workspace = true
lettre.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
reqwest = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }

[lints]
workspace = true
