[package]
name = "my-fam-tree-migrator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "run_migrations"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
