[package]
name = "my-fam-tree-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "openapi-dump"
path = "src/bin/openapi_dump.rs"

[dependencies]
my-fam-tree-api = { path = "../api" }
serde_json.workspace = true
anyhow.workspace = true

[lints]
workspace = true
