[package]
name = "my-family-persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
my-family-domain = { path = "../domain" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
