[package]
name = "my-family-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
my-family-domain = { path = "../domain" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }

[lints]
workspace = true
