[package]
name = "my-family-reminder-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "reminder-worker"
path = "src/main.rs"

[dependencies]
my-family-cache = { path = "../cache" }
my-family-persistence = { path = "../persistence" }
my-family-email = { path = "../email" }
anyhow.workspace = true
dotenvy.workspace = true
envy.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
