[package]
name = "my-family-reminder-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "reminder-worker"
path = "src/main.rs"

[features]
default = []
# Enables an in-process HTTP listener exposing POST /__test/advance-clock so
# E2E tests can fast-forward the worker's clock. MUST NOT be enabled in prod.
test-fixtures = ["dep:actix-web"]

[dependencies]
my-family-cache = { path = "../cache" }
my-family-domain = { path = "../domain" }
my-family-persistence = { path = "../persistence" }
my-family-email = { path = "../email" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
envy.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }
actix-web = { workspace = true, optional = true }

[dev-dependencies]
sqlx.workspace = true
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[lints]
workspace = true
