[package]
name = "my-family-seeder"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Dev/test seed: a library + thin binary that UPSERTs a deterministic dataset
# (3 users, 1 family, 8 persons, etc.) and mints one magic-link URL per user.
#
# Lives in a dedicated crate — not in `my-family-api` — so production builds
# of the api never include this code path. The seeder is invoked one-shot
# from the compose `seeder` service (.docker/seeder.Dockerfile) and from CI
# backend-tests / backend-coverage / frontend-e2e jobs.

[lib]
name = "my_family_seeder"
path = "src/lib.rs"

[[bin]]
name = "seed"
path = "src/main.rs"

[dependencies]
my-family-api = { path = "../api" }
my-family-domain = { path = "../domain" }
my-family-persistence = { path = "../persistence" }
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[lints]
workspace = true
