[package]
name = "my-family-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-async.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }

[lints]
workspace = true
