[package]
name = "my-fam-tree-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "worker"
path = "src/main.rs"

[features]
default = []
# Enables an in-process HTTP listener exposing POST /__test/advance-clock so
# E2E tests can fast-forward the worker's clock. MUST NOT be enabled in prod.
test-fixtures = ["dep:actix-web"]

[dependencies]
my-fam-tree-config = { path = "../config" }
my-fam-tree-cache = { path = "../cache" }
my-fam-tree-domain = { path = "../domain" }
my-fam-tree-persistence = { path = "../persistence" }
my-fam-tree-email = { path = "../email" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }
actix-web = { workspace = true, optional = true }

[dev-dependencies]
sqlx.workspace = true
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[lints]
workspace = true
