[package]
name = "my-fam-tree-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "worker"
path = "src/main.rs"

[features]
default = []
# Adds a `POST /__test/advance-clock` route on the same in-process HTTP
# listener that already serves `/healthz`, so the E2E suite can fast-
# forward the worker's clock and run a tick immediately instead of
# waiting for the real 06:00 window. MUST NOT be enabled in production.
test-fixtures = []

[dependencies]
my-fam-tree-config = { path = "../config" }
my-fam-tree-cache = { path = "../cache" }
my-fam-tree-domain = { path = "../domain" }
my-fam-tree-persistence = { path = "../persistence" }
my-fam-tree-email = { path = "../email" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }
actix-web = { workspace = true }

[dev-dependencies]
sqlx.workspace = true
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[lints]
workspace = true
